--- a/templates/base.html
+++ b/templates/base.html
@@ -147,7 +147,7 @@
                     <i class="i-plain icon-line2-envelope nomargin"></i>
                     <div class="he-text">
                         Написать
-                        <span>info@canvas.com</span>
+                        <span>info@zip33.ru</span>
                     </div>
                 </li>
                 <li>
@@ -312,7 +312,6 @@
 ============================================= -->
 <script src="{% static 'js/plugins.js' %}"></script>
 <script src="{% static 'js/functions.js' %}"></script>
-<script src="{% static 'js/common.js' %}"></script>
 {% if messages %}
     <script>
         $(window).on("load", function () {
