--- a/area/templates/confirmrequest.html
+++ b/area/templates/confirmrequest.html
@@ -55,6 +55,13 @@
     <form id="id-form-confirmownerrequest" name="name-form-confirmownerrequest" class="nobottommargin"
           action="{% url 'area:ownerrequests' new_owner.id %}" method="post">
         {% csrf_token %}
+        {% if form.non_field_errors %}
+            <div class="alert alert-danger" role="alert">
+                {% for error in form.non_field_errors %}
+                    <p{% if forloop.last %} class="mb-0"{% endif %}>{{ error }}</p>
+                {% endfor %}
+            </div>
+        {% endif %}
         <div class="row bottommargin-sm">
             {% for checkbox in form.ownerrequest %}
                 {% with checkbox.choice_label|split:"," as words %}
