JS Async Progress Bar

--- a/area/templates/initialization.html
+++ b/area/templates/initialization.html
@@ -18,6 +18,7 @@
                 <span class="sr-only">0%</span>
             </div>
         </div>
+        <div id="init_message"></div>
         <a href="{% url 'rosreestr:apirosreestr' %}" class="button button-circle topmargin btn-initialization"><i
                 class="icon-data"></i>Загрузить данные</a>
     </div>
