working under voting system

--- a/area/templates/statistichoas.html
+++ b/area/templates/statistichoas.html
@@ -7,6 +7,10 @@
 
 {% block content %}
 
+    <div class="fancy-title title-bottom-border">
+        <h2>Общая статистика <span>ТСЖ</span></h2>
+    </div>
+
     <div class="col_one_fourth nobottommargin center">
         <i class="i-plain i-xlarge divcenter nobottommargin icon-building"></i>
         <div class="counter counter-large" style="color: #1abc9c;">
