Amend account for entity type of user

--- a/systemapps/account/templates/loginsignup.html
+++ b/systemapps/account/templates/loginsignup.html
@@ -1,4 +1,10 @@
 {% extends 'base.html' %}
+{% load static %}
+
+{% block stylesheet %}
+    <!-- Radio Checkbox Plugin -->
+    <link rel="stylesheet" href="{% static 'css/radio-checkbox.css' %}" type="text/css"/>
+{% endblock %}
 
 {% block content %}
 
