Update all css and list of questions

--- a/area/templates/statistichoas.html
+++ b/area/templates/statistichoas.html
@@ -8,7 +8,7 @@
 {% block content %}
 
     <div class="fancy-title title-bottom-border">
-        <h2>Общая статистика <span>ТСЖ</span></h2>
+        <h2>Общая статистика <span>Дома</span></h2>
     </div>
 
     <div class="col_one_fourth nobottommargin center">
