Add detail for question

--- a/systemapps/account/templates/profile.html
+++ b/systemapps/account/templates/profile.html
@@ -237,7 +237,7 @@
                     </div>
                     <div class="modal-body">
                         <div class="avatar-container">
-                            <img src="{{ user.avatar.url }}" id="avatar" style="max-width: 100%;">
+                            <img alt="avatar" src="{{ user.avatar.url }}" id="avatar" style="max-width: 100%;">
                         </div>
                     </div>
                     <div class="modal-footer">
