Work under Voting system

--- a/voting/templates/questiondetail.html
+++ b/voting/templates/questiondetail.html
@@ -55,6 +55,7 @@
                         </div>
                         <h3>{{ candidate.user.fullname }}
                             <span class="subtitle bottommargin-sm">Выдвинут: {{ candidate.date_nominate }}</span>
+                            <span class="subtitle ">Голосовали: {{ candidate.votes.date_voting }}</span>
                         </h3>
 
                         <div class="text-left">
